# chartcraft

./: .gitignore  AGENTS.md  CHARTERCRAFT_V1_README.md  LICENSE  MANIFEST.in  README.md  example_app.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
.omo/run-continuation/: ses_10c363ee2ffe18YWpHE2boLaFJ.json  ses_10c382f20ffeEhw3ZuC55honyC.json  ses_10c383fbdffe4r6F9fEpDpzA3w.json  ses_10c3935b9ffeiaqj6WNUsjGaOE.json  ses_10c394723ffeU042t7ZcGIoVAj.json  ses_10c3c1fbfffezuN52S1A43Jso2.json  ses_10c3c35d2fferapz9E0DOW7h5H.json  ses_10c3c82e7ffel9QkohpOjTerLC.json
.opencode/: pilot-banner.txt  pilot-state.json
chartcraft/: __init__.py  charts.py  dashboard.py  data.py  presets.py  render.py  themes.py  visual_builder.py
chartcraft/builder/: builder.html
chartcraft/builder/components/: color_picker.js
chartcraft/connectors/: __init__.py  api.py  csv_connector.py  sql.py
chartcraft/core/: __init__.py  colors.py  models.py  serializer.py  theme.py
chartcraft/server/: __init__.py  app_server.py  codegen.py  handler.py  parser.py  projects.py  query_api.py  sse.py
chartcraft/static/: viewer.html
dashboards/: dashboard.html
docs/: api-reference.md  authentication.md  builder.md  charts.md  data-sources.md  export-and-deployment.md  filters-and-interactivity.md  getting-started.md  index.md  presets-and-page-builders.md  realtime.md  themes-and-colors.md
tests/: test_chartcraft_v1.py
thoughts/ledgers/: CONTINUITY_ses_10c3.md
